--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -50,7 +50,7 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#373737;
+  color:#ccc;
   background: #212121;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
@@ -61,7 +61,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
-  color:#222222;
+  color:#cc0000;
   font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
@@ -355,7 +355,10 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-  background: #f2f2f2;
+  /*background: #f2f2f2;*/
+  background-image: url("../images/stars.gif");
+  background-size: 20% 30%;
+  background-repeat: repeat;
   border-top: 1px solid #111;
   border-bottom: 1px solid #111;
 }
