--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -62,7 +62,8 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#cc0000;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
+  /*font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;*/
+  font-family: 'Chewy', cursive;
   letter-spacing: -1px;
 }
 
@@ -365,6 +366,7 @@ Full-Width Styles
 
 #main_content {
   padding-top: 40px;
+  background: #222;
 }
 
 #footer_wrap {
