--- a/css/layouts/scottPage.css
+++ b/css/layouts/scottPage.css
@@ -159,7 +159,7 @@ a:hover{
     height: 50%;
     margin: auto;
     position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
+    top: -5%; left: 0; bottom: 0; right: 0;
     text-align: center;
     text-transform: uppercase;
 }
