--- a/css/automata.css
+++ b/css/automata.css
@@ -21,7 +21,7 @@ and open the template in the editor.
     /*margin-left: -10%;*/
 }
 body {
-   background-color: #85CEE3;
+   background-color: #333;
    /*background-color: #7f8c8d;*/
 
 }
