--- a/css/layouts/scottPage.css
+++ b/css/layouts/scottPage.css
@@ -4,303 +4,180 @@
     box-sizing: border-box;
 }
 
-/*
- * -- BASE STYLES --
- * Most of these are inherited from Base, but I want to change a few.
- */
+a {
+    text-decoration: none;
+    color: rgb(61, 146, 201);
+}
+a:hover,
+a:focus {
+    text-decoration: underline;
+}
+
 body {
-    line-height: 1.7em;
-    color: #7f8c8d;
-    font-size: 13px;
+    background: #eee;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-label {
-    color: white;
+h3 {
+    font-weight: 100;
 }
 
-.box-header {
-   align: center;
-   /*.color: white;*/
-   padding-top: 5%;
-   padding-bottom: 5%;
-   border: 3px solid #ffaa00;
-}
-
+/* LAYOUT CSS */
 .pure-img-responsive {
     max-width: 100%;
     height: auto;
 }
 
-/*
- * -- LAYOUT STYLES --
- * These are some useful classes which I will need
- */
-.l-box {
-    padding: 1em;
+#layout {
+    padding: 0;
 }
 
-.l-box-lrg {
-    padding: 2em;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-}
-
-.is-center {
+.header {
     text-align: center;
+    top: auto;
+    margin: 3em auto;
 }
 
-
-
-/*
- * -- PURE FORM STYLES --
- * Style the form inputs and labels
- */
-.pure-form label {
-    margin: 1em 0 0;
-    font-weight: bold;
-    font-size: 100%;
-}
-
-.pure-form input[type] {
-    border: 2px solid #ddd;
-    box-shadow: none;
-    font-size: 100%;
-    width: 100%;
-    margin-bottom: 1em;
-}
-
-/*
- * -- PURE BUTTON STYLES --
- * I want my pure-button elements to look a little different
- */
-.pure-button {
-    background-color: #1f8dd6;
-    color: white;
-    padding: 0.5em .5em;
-    border-radius: 5px;
-}
-
-.pure-button-primary {
-    background: white;
-    color: #1f8dd6;
-    border-radius: 5px;
-    font-size: 120%;
-}
-
-
-/*
- * -- MENU STYLES --
- * I want to customize how my .pure-menu looks at the top of the page
- */
-
-.home-menu {
-    padding: 0.5em;
-    text-align: center;
-    /*box-shadow: 0 1px 1px rgba(0,0,0, 0.10);*/
-    border-bottom: 3px solid white;
-}
-.home-menu {
-    background: #ffaa00;
-}
-.pure-menu.pure-menu-fixed {
-    /* Fixed menus normally have a border at the bottom. */
-    /*border-bottom: none;*/
-    /* I need a higher z-index here because of the scroll-over effect. */
-    z-index: 4;
-}
-
-.home-menu .pure-menu-heading {
-    color: white;
-    font-weight: 400;
-    font-size: 120%;
-}
-
-.home-menu .pure-menu-selected {
-    color: #33448e;
-}
-
-.home-menu a {
-    color: white;
-}
-.home-menu li a:hover,
-.home-menu li a:focus {
-    background: none;
-    border: none;
-    color: white;
-}
-
-a{
-   color: #b98000;
-   cursor: pointer;
-   text-decoration: none;
-}
-a:hover{
-   color: #ffbf00;
-   text-decoration: underline;
-}
-
-/*
- * -- SPLASH STYLES --
- * This is the blue top section that appears on the page.
- */
-
-.splash-container {
+.sidebar {
     background: #333;
-    z-index: 1;
-    overflow: hidden;
-    /* The following styles are required for the "scroll-over" effect */
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: fixed !important;
+    color: #fff;
+    border-right: 5px solid #ffaa00
 }
 
-.splash {
-    /* absolute center .splash within .splash-container */
-    width: 80%;
-    height: 50%;
-    margin: auto;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
-    text-align: center;
+.brand-title,
+.brand-tagline {
+    margin: 0;
+}
+.brand-title {
     text-transform: uppercase;
 }
-
-/* This is the main heading that appears on the blue section */
-.splash-head {
-   background: #ffaa00;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    border: 7px solid white;
-    padding: .5em 1.6em;
-    font-weight: 100;
-    border-radius: 5px;
-    line-height: 1em;
+.brand-tagline {
+    font-weight: 300;
+    color: #ffaa00;
 }
 
-/* This is the subheading that appears on the blue section */
-.splash-subhead {
-   text-align: justify;
-   text-align-last: justify;
-   font-weight: bold;
-   font-size: 1.0em;
-    color: white;
+.nav-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.nav-item {
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+}
+.nav-item a {
+    background: transparent;
+    border: 2px solid #b98000;
+    color: #fff;
+    margin-top: 1em;
     letter-spacing: 0.05em;
-    /*opacity: 0.8;*/
-    /*margin-bottom: 50px;*/
-}
-
-/*
- * -- CONTENT STYLES --
- * This represents the content area (everything below the blue section)
- */
-.content-wrapper {
-    /* These styles are required for the "scroll-over" effect */
-    position: absolute;
-    top: 87%;
-    width: 100%;
-    min-height: 12%;
-    z-index: 2;
-    background: white;
-
-}
-
-/* This is the class used for the main content headers (<h2>) */
-.content-head {
-    font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: 0.1em;
-    margin: 2em 0 1em;
+    font-size: 85%;
+}
+.nav-item a:hover,
+.nav-item a:focus {
+    border: 2px solid #ffbf00;
+    text-decoration: none;
 }
 
-/* This is a modifier class used when the content-head is inside a ribbon */
-.content-head-ribbon {
-    color: white;
-}
-
-/* This is the class used for the content sub-headers (<h3>) */
 .content-subhead {
-    color: #1f8dd6;
+    text-transform: uppercase;
+    color:#999;
+    border-bottom: 1px solid #999;
+    padding: 0.4em 0;
+    font-size: 80%;
+    font-weight: 500;
+    letter-spacing: 0.1em;
 }
-    .content-subhead i {
-        margin-right: 7px;
+
+.content {
+    padding: 2em 1em 0;
+}
+
+.post {
+    padding-bottom: 2em;
+}
+.post-title {
+    font-size: 2em;
+    color: #222;
+    margin-bottom: 0.2em;
+}
+.post-avatar {
+    border-radius: 50px;
+    float: right;
+    margin-left: 1em;
+}
+.post-description {
+    font-family: Georgia, "Cambria", serif;
+    color: #444;
+    line-height: 1.8em;
+}
+.post-meta {
+    color: #999;
+    font-size: 90%;
+    margin: 0;
+}
+
+.post-category {
+    margin: 0 0.1em;
+    padding: 0.3em 1em;
+    color: #fff;
+    background: #999;
+    font-size: 80%;
+}
+    .post-category-design {
+        background: #5aba59;
+    }
+    .post-category-pure {
+        background: #4d85d1;
+    }
+    .post-category-yui {
+        background: #8156a7;
+    }
+    .post-category-js {
+        background: #df2d4f;
     }
 
-/* This is the class used for the dark-background areas. */
-.ribbon {
-    background: #FFa540;
-    color: #aaa;
+.post-images {
+    margin: 1em 0;
+}
+.post-image-meta {
+    margin-top: -3.5em;
+    margin-left: 1em;
+    color: #fff;
+    text-shadow: 0 1px 1px #333;
 }
 
-/* This is the class used for the footer */
 .footer {
-    background: #111;
+    padding: 1em 0;
+}
+.footer a {
+    color: #ccc;
+    font-size: 80%;
+}
+.footer .pure-menu a:hover,
+.footer .pure-menu a:focus {
+    background: none;
 }
 
-/*
- * -- TABLET (AND UP) MEDIA QUERIES --
- * On tablets and other medium-sized devices, we want to customize some
- * of the mobile styles.
- */
 @media (min-width: 48em) {
-
-    /* We increase the body font size */
-    body {
-        font-size: 16px;
-    }
-    /* We want to give the content area some more padding */
     .content {
-        padding: 1em;
+        padding: 2em 3em 0;
+        margin-left: 25%;
     }
 
-    /* We can align the menu header to the left, but float the
-    menu items to the right. */
-    .home-menu {
-        text-align: left;
-    }
-        .home-menu ul {
-            float: right;
-        }
-
-    /* We increase the height of the splash-container */
-/*    .splash-container {
-        height: 500px;
-    }*/
-
-    /* We decrease the width of the .splash, since we have more width
-    to work with */
-    .splash {
-        width: 50%;
-        height: 50%;
+    .header {
+        margin: 80% 2em 0;
+        text-align: right;
     }
 
-    .splash-head {
-        font-size: 250%;
+    .sidebar {
+        position: fixed;
+        top: 0;
+        bottom: 0;
     }
 
-
-    /* We remove the border-separator assigned to .l-box-lrg */
-    .l-box-lrg {
-        border: none;
-    }
-
-}
-
-/*
- * -- DESKTOP (AND UP) MEDIA QUERIES --
- * On desktops and other large devices, we want to over-ride some
- * of the mobile and tablet styles.
- */
-@media (min-width: 78em) {
-    /* We increase the header font size even more */
-    .splash-head {
-        font-size: 300%;
+    .footer {
+        text-align: center;
     }
 }
